# wine-shop

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.sample  Dockerfile  README.md  docker-compose-init.yml  docker-compose-prod.yml  docker-compose-update-cert.yml  docker-compose.yml  healthcheck.py  manage.py  pyproject.toml  requirements.txt  run.py
backend/adoption/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/adoption/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
backend/adoption/templates/emails/: appointment.html  appointment.txt  notification_adopt_form.html  notification_adopt_form.txt
backend/adoption/tests/: test_serializers.py  test_views.py
backend/commands/: cert_renew.sh  deploy.sh  setup_minio.sh  start.sh
backend/config/: settings.py  urls.py
backend/config/settings/: dev.py  prod.py  test_settings.py
backend/nginx/: nginx.conf  njinx.conf
backend/nginx/init_cert/: nginx.conf
backend/notification/: admin.py  models.py  notification.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/notification/migrations/: 0001_initial.py  0002_initial.py
backend/notification/templates/emails/: found_pet_that_you_looking_for.html  found_pet_that_you_looking_for.txt  mailing_template.html  mailing_template.txt  restore_password.html  restore_password.txt
backend/pet/: admin.py  filters.py  models.py  serializers.py  storages.py  tasks.py  urls.py  views.py
backend/pet/fixtures/: test_data.json
backend/pet/migrations/: 0001_initial.py  0002_alter_pet_options_alter_pet_age_alter_pet_weight.py  0002_initial.py  0003_alter_pet_options_pet_date_created_and_more.py  0004_remove_pet_unique_pet_per_day_and_more.py  0005_rename_type_pet_pet_type_alter_pet_unique_together.py  0006_image.py  0007_alter_image_file.py
backend/pet/tests/: test_authentication.py  test_responses_data.py
backend/tests/tests_user/: tests_user_authentification.py
backend/user/: admin.py  apps.py  models.py  permissions.py  serializer.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py
backend/user/tests/: test_responses_data.py  test_user_authentification.py  tests_responses_data.py  tests_user_authentification.py
frontend/: .env  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/api/: adoptionForms.ts  api.ts  appointment.ts  auth.ts  pets.ts  subscribe.ts  users.ts
frontend/src/app/: store.ts
frontend/src/components/AIAgent/: AIAgent.scss  AIAgent.tsx
frontend/src/components/AcountLinkHeader/: AcountLinkHeader.module.scss  AcountLinkHeader.tsx
frontend/src/components/AdoptionAcountList/: AdoptionAcountList.tsx  index.ts
frontend/src/components/AdoptionFormInfo/: AdoptionFormInfo.tsx  index.ts
frontend/src/components/AppointmentAccountList/: AppointmentAccountList.tsx  index.js
frontend/src/components/AppointmentInfo/: AppointmentInfo.tsx  index.ts
frontend/src/components/AppointmentModal/: AppointmentModal.tsx
frontend/src/components/Breadcrumbs/: Breadcrumbs.tsx
frontend/src/components/CatalogCard/: CatalogCard.module.scss  CatalogCard.tsx
frontend/src/components/CatalogFilter/: CatalogFilter.tsx
frontend/src/components/CatalogList/: CatalogList.tsx
frontend/src/components/CatalogSlider/: CatalogSlider.module.scss  CatalogSlider.tsx
frontend/src/components/CatalogViewSetter/: CatalogViewSetter.tsx
frontend/src/components/FooterElem/: FooterElem.tsx
frontend/src/components/Header/: Header.module.scss  Header.tsx
frontend/src/components/Header copy/: Header.tsx
frontend/src/components/HomeBanner1/: HomeBanner1.module.scss  HomeBanner1.tsx
frontend/src/components/HomeBanner2/: HomeBanner2.tsx
frontend/src/components/HomeBannerPartner/: HomeBannerPartner.tsx  index.ts
frontend/src/components/ModalChoice/: ModalChoice.tsx
frontend/src/components/ModalResetPassword/: ModalResetPassword.tsx
frontend/src/components/OneShotNotification/: OneShotNotification.tsx
frontend/src/components/PetAdoptionFormModal/: PetAdoptionFormModal.tsx
frontend/src/components/PetInfoSwiper/: PetInfoSwiper.tsx
frontend/src/components/ProtectedRoute/: ProtectedRoute.tsx
frontend/src/components/SubscribeNews/: SubscribeNews.tsx
frontend/src/components/constants/: menuLinks.ts
frontend/src/features/: authentication.ts  favorites.ts  pets.ts
frontend/src/modules/AccountPage/: AccountPage.tsx
frontend/src/modules/App/: App.tsx
frontend/src/modules/CatalogPage/: CatalogPage copy.tsx  CatalogPage.tsx
frontend/src/modules/FavoritePage/: FavoritePage.tsx
frontend/src/modules/Root/: Root.tsx
frontend/src/types/: AdoptionForm.ts  AdoptionFormData.ts  Appointment.ts  AppointmentFormData.ts  Filters.ts  LocalAccessKeys.ts  Pet.ts  ViewControlle.ts  validRoutes.ts
frontend/src/utils/: accessLocalStorage.ts  helperFormater.ts  helperPet.ts
nginx/: nginx-setup.conf
(+15 files in other folders)
