[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Sokolov",email = "gnonasis@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django (>=5.2.3,<6.0.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "django-stubs (>=5.2.0,<6.0.0)",
    "djangorestframework-stubs (>=3.16.0,<4.0.0)",
    "boto3 (>=1.38.36,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "django-storages (>=1.14.6,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.mypy]
python_version = "3.12"
#check_untyped_defs = true
#ignore_missing_imports = true
#warn_unused_ignores = true
#warn_redundant_casts = true
#warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "rest_framework.*",
    "corsheaders.*"
]
ignore_missing_imports = true