[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Roman Sokolov",email = "gnonasis@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django (>=5.2.3,<6.0.0)",
    "mypy (>=1.16.0,<2.0.0)",
    "django-stubs (>=5.2.0,<6.0.0)",
    "djangorestframework-stubs (>=3.16.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-filter (>=25.1,<26.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "django-dramatiq (>=0.13.0,<0.14.0)",
    "django-minio-storage (>=0.5.8,<0.6.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "redis (>=6.2.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.mypy]
python_version = "3.12"
#check_untyped_defs = true
#ignore_missing_imports = true
#warn_unused_ignores = true
#warn_redundant_casts = true
#warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "rest_framework.*",
    "corsheaders.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 79  # Максимальна довжина рядка (за замовчуванням 88)
target-version = ["py38", "py39", "py310"]  # Цільові версії Python
skip-string-normalization = false  # Не змінювати лапки у рядках (True/False "")
include = '\.pyi?$'  # Включити лише Python файли (.py, .pyi)
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations/
)/
'''  # Шаблон для виключення файлів
